# python-agentliveness

./: README.rst  requirements.txt  setup.cfg
agentliveness/: agent.py  cmd.py
