[metadata]
name = agentliveness
summary = OpenStack agent liveness check
description-file =
    README.rst
author = SAP SE
author-email = andrew.karpow@sap.com
home-page = https://github.com/sapcc/openstack-agent-liveness
version = 1.0.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    agentliveness

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    openstack-agent-liveness = agentliveness.cmd:main

[egg_info]
tag_build = 1
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
